# sysmon

./: .gitignore  Cargo.toml  README.md
.github/workflows/: android.yml  sysmon-un.yml  sysmon-ws.yml  trafficmonitor.yml
TrafficMonitor/: .ci-trigger
TrafficMonitor/OpenHardwareMonitorApi/: OpenHardwareMonitorApi.vcxproj  app.rc
TrafficMonitor/TrafficMonitor/: CommonData.h  TaskBarSettingsDlg.h  TrafficMonitor.cpp  TrafficMonitor.rc  TrafficMonitor.vcxproj  TrafficMonitor.vcxproj.filters  TrafficMonitorDlg.cpp  TrafficMonitorDlg.h  WebSocketServer.cpp  WebSocketServer.h  resource.h
sysmon-android/: settings.gradle.kts
sysmon-android/app/: build.gradle.kts  proguard-rules.pro
sysmon-android/app/src/main/: AndroidManifest.xml
sysmon-android/app/src/main/java/com/sysmon/monitor/: MainActivity.kt  SysMonApp.kt
sysmon-android/app/src/main/java/com/sysmon/monitor/data/model/: SystemMetrics.kt
sysmon-android/app/src/main/java/com/sysmon/monitor/data/repository/: UrlRepository.kt  (+1 more)
sysmon-android/app/src/main/java/com/sysmon/monitor/service/: SysMonForegroundService.kt
sysmon-android/app/src/main/java/com/sysmon/monitor/viewmodel/: CamViewModel.kt  MonitorViewModel.kt
sysmon-android/app/src/main/java/com/sysmon/monitor/widget/: CpuWidget.kt  MemProgressBitmapDrawer.kt  MemWidget.kt  NetSpeedBitmapDrawer.kt  NetSpeedWidget.kt  SpeedometerBitmapDrawer.kt  WidgetState.kt
sysmon-android/app/src/main/res/values/: strings.xml  themes.xml
sysmon-android/app/src/main/res/xml/: widget_cpu.xml  widget_mem.xml  widget_net_speed.xml
sysmon-android/gradle/: libs.versions.toml
sysmon-core/: Cargo.toml
sysmon-core/src/: metrics.rs
sysmon-ios/SysMon.xcodeproj/: project.pbxproj
sysmon-ios/SysMon.xcodeproj/project.xcworkspace/xcuserdata/fusheng.xcuserdatad/: UserInterfaceState.xcuserstate
sysmon-ios/SysMon.xcodeproj/xcshareddata/xcschemes/: SysMon.xcscheme
sysmon-ios/SysMon/Resources/: Info.plist
sysmon-ios/SysMon/Sources/: ContentView.swift  SysMonApp.swift
sysmon-ios/SysMon/Sources/Model/: SystemMetrics.swift
sysmon-ios/SysMon/Sources/Network/: SysMonWebSocket.swift  WsState.swift
sysmon-ios/SysMon/Sources/Repository/: UrlRepository.swift
sysmon-ios/SysMon/Sources/Theme/: SysMonColors.swift
sysmon-ios/SysMon/Sources/ViewModel/: MonitorViewModel.swift
sysmon-ios/SysMon/Sources/Views/Chart/: ChartView.swift
sysmon-ios/SysMon/Sources/Views/Components/: CoreBarChart.swift  DualLineChart.swift  GaugeChart.swift  GlassCard.swift
sysmon-ios/SysMon/Sources/Views/Connect/: ConnectView.swift
sysmon-rn/: App.js  app.json  package-lock.json  package.json
sysmon-rn/src/components/: GaugeChart.js  LineChart.js
sysmon-rn/src/context/: WebSocketContext.js
sysmon-rn/src/screens/: ConnectScreen.js  DashboardScreen.js
sysmon-rn/src/utils/: format.js  theme.js
sysmon-un/: Cargo.toml  build.sh  client-demo.html
sysmon-un/src/: main.rs  metrics.rs  server.rs  tray.rs
sysmon-ws/: Cargo.toml  build.sh  gen_icon.py  package-mac.sh  package-win.bat
sysmon-ws-docker/: Cargo.toml  Dockerfile  README.md  client-demo.html  docker-compose.yml  nginx.conf
sysmon-ws-docker/src/: main.rs  metrics.rs  server.rs
sysmon-ws/.github/workflows/: release.yml
sysmon-ws/assets/: AppIcon.icns  Info.plist  dmg_settings.py  gen_icon.py
sysmon-ws/src/: main.rs  metrics.rs  server.rs  statusbar_view.rs  tray_app.rs
(+8 files in other folders)
