[package]
name = "sysmon-core"
version = "0.1.0"
edition = "2021"
description = "Shared core library for sysmon projects: metrics collection and WebSocket server"

[dependencies]
sysinfo = "0.30"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
