[package]
name = "sysmon-un"
version = "0.1.0"
edition = "2021"
description = "System monitor with WebSocket streaming for Ubuntu/Linux (CPU, Memory, Network)"

[[bin]]
name = "sysmon-un"
path = "src/main.rs"

[dependencies]
sysinfo = "0.30"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"

# Linux 桌面系统托盘 (StatusNotifierItem)
ksni = "0.2"
image = "0.25"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
